--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,14 +2,14 @@
     <string name="app_name">PIEAS Student Directory</string>
     <string name="registration_form">Registration Form</string>
     <string name="name">Name :</string>
-    <string name="department">Department :</string>
-    <string name="registration">Registration# :</string>
-    <string name="phone">Phone# :</string>
-    <string name="gender">Gender :</string>
+    <string name="department">Department:</string>
+    <string name="registration">Registration#:</string>
+    <string name="phone">Phone#:</string>
+    <string name="gender">Gender:</string>
     <string name="name2">Name</string>
-    <string name="reg_no">##-#-#-###-####</string>
+    <string name="reg_no">###########</string>
     <string name="dee_dme_dcis">DEE, DME, DCIS</string>
-    <string name="phone_no">####-#######</string>
+    <string name="phone_no">###########</string>
     <string name="male_female">Male, Female</string>
     <string name="add">Add</string>
     <string name="cancel">Cancel</string>
@@ -19,4 +19,16 @@
     <string name="remove">Remove</string>
     <string name="student_list">Student List</string>
     <string name="show_all">Show All</string>
+    <string name="student_image">Student Image</string>
+    <string name="student_name">Student Name</string>
+    <string name="father_name">Father Name:</string>
+    <string name="room">Room#:</string>
+    <string name="hostel">Hostel:</string>
+    <string name="address">Address:</string>
+    <string name="blood_group">Blood Group:</string>
+    <string name="semester">Semester:</string>
+    <string name="_1_8">1 - 8</string>
+    <string name="batch">Batch:</string>
+    <string name="email">Email:</string>
+    <string name="username_domain_com">userName@domain.com</string>
 </resources>
